GitHub: Build stability on Windows machines
*) Distinct workflow files for each OS. Allows easier changes that
should be applied to a single OS but not to the others

*) Instance Creation: Disable form until the UUID is generated
*) Product Sync: Wait until the transfer is completed

Bug: DCS-881
Change-Id: Ic34bcc600d043d30020a5515375e4809b0a7f7fc